Fix text overflowing in fontcards

--- a/src/app.scss
+++ b/src/app.scss
@@ -133,6 +133,7 @@ header {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-column-gap: 40px;
+  grid-row-gap: 50px;
   width: 90%;
   margin: 30px auto;
   // border: black solid 1px;
@@ -142,13 +143,14 @@ header {
   width: 100%;
   height: 350px;
   padding: 15px 5px;
-  animation: opacity-in 1s ease-out;
+  animation: opacity-in 0.5s ease-in;
+  overflow: hidden;
   // word-wrap: break-word;
   .font-title {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 30px;
+    margin-bottom: 15px;
   }
   .fa {
     color: rgb(255, 86, 86);
